# rosa

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO.md  Tuprules.tup  build  meson.build
.github/workflows/: continuous-integration-workflow.yml
data/encounters/: ff2us-glitchless.txt  ff2us.txt
data/maps/: ff2us-glitchless.txt  ff2us.txt
data/routes/: glitchless.txt  marathon-no64-drain.txt  marathon-no64-excalbur-bosses.txt  marathon-no64-excalbur.txt  no64-drain-to-giant.txt  no64-drain.txt  no64-excalbur-marathon-recovery-fusoya.txt  no64-excalbur-marathon-recovery-paladin.txt  no64-excalbur-marathon.txt  no64-excalbur-to-giant.txt  no64-excalbur.txt  no64-rosa-50-elixir.txt  no64-rosa-marathon-recovery-fusoya.txt  no64-rosa-marathon-recovery-paladin.txt  no64-rosa-marathon.txt  no64-rosa-safe.txt  no64-rosa.txt  nocw.txt  paladin.txt  premist.txt  ss-drain.txt  ss-excalbur.txt  tas-drain.txt  tas-excalbur.txt  tas-rosa.txt  test.txt  yes64.txt
data/routes/archive/: no64-drain-to-giant.txt  no64-excalbur-to-giant.txt  post-giant.txt  ss-excalbur.txt  tas-excalbur.txt
doc/: twin-seed-notes.md  variables.txt
include/: lmdb++.h
scripts/: optimize-route  optimize_route.py  rosa_helper.py
src/: CMakeLists.txt  Tupfile  cache.cc  cache.hh  duration.hh  encounter.cc  encounter.hh  engine.cc  engine.hh  instruction.cc  instruction.hh  map.cc  map.hh  meson.build  optimizer.cc  optimizer.hh  options.cc  options.hh  parameters.cc  parameters.hh  party.cc  party.hh  randomizer.cc  randomizer.hh  rosa.cc  route.cc  route.hh  route_output.cc  route_output.hh  spoony.cc  state.hh  variable.hh  version.hh.in
tools/: generate-myself-routes  generate-route  generate-route-uc  generate-routes
